src/objects/fc_csc__Collections_Summary__c.object
<CustomObject>
    <fields>
        <fullName>fc_csc__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collections Summary</relationshipLabel>
        <relationshipName>Collections_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fc_csc__Batchable_UUID__c</fullName>
        <label>Batchable UUID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fc_csc__Last_Payment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fc_csc__Last_Payment_Number__c</fullName>
        <label>Last Payment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Most_Overdue_Invoice_Date__c</fullName>
        <label>Most Overdue Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fc_csc__Most_Overdue_Promise_to_Pay__c</fullName>
        <label>Most Overdue Promise to Pay</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fc_csc__Next_Renewal_Date__c</fullName>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fc_csc__Number_of_Open_Invoices__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Open Invoices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fc_csc__Promise_to_Pay_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Promise to Pay Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Total_Outstanding_Balance2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Total_Outstanding_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Outstanding Balance (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fc_csc__X1_30_Day_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>1-30 Day Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__X31_60_Day_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>31-60 Day Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__X61_90_Day_Balance__c</fullName>
        <label>61-90 Day Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__X91_Day_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>91+ Day Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Zuora_Account_Numbers__c</fullName>
        <label>Zuora Account Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Collections Summary</label>
    <listViews>
        <fullName>fc_csc__All</fullName>
        <columns>fc_csc__Account__c</columns>
        <columns>fc_csc__Zuora_Account_Numbers__c</columns>
        <columns>fc_csc__Total_Outstanding_Balance2__c</columns>
        <columns>fc_csc__Most_Overdue_Invoice_Date__c</columns>
        <columns>fc_csc__Number_of_Open_Invoices__c</columns>
        <columns>fc_csc__X1_30_Day_Balance__c</columns>
        <columns>fc_csc__X31_60_Day_Balance__c</columns>
        <columns>fc_csc__X61_90_Day_Balance__c</columns>
        <columns>fc_csc__X91_Day_Balance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Collections Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>